# Discrete-Diffusion-Forcing

./: .gitignore  README.md  pyproject.toml
D2F-eval/: eval_dream.py  eval_dream.sh  eval_dream_d2f_vllm.py  eval_dream_d2f_vllm.sh  eval_llada.py  eval_llada.sh  generate_llada_demo_ar.py  generate_llada_demo_block.py  generate_llada_demo_ntis.py
D2F-train/: train.py  train.sh
D2F-train/config/: acc_config  dream_eagle.yaml  llada.yaml
D2F-train/model/: modeling_llada.py
D2F-train/utils/: data.py  generation.py  loss.py  model.py  util.py
docs/: index.html
