[project]
name = "discrete-diffusion-forcing"
version = "0.1.0"
description = "Discrete Diffusion Forcing (D2F): dLLMs Can Do Faster-Than-AR Inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers==4.49.0",
    "lm_eval==0.4.8",
    "accelerate==0.34.2",
    "antlr4-python3-runtime==4.11",
    "math_verify",
    "sympy",
    "hf_xet",
    "pydantic==2.10.6",
    "gradio",
]
